[tool.poetry]
name = "postgres-lock"
version = "0.1.0"
description = "Lock mechanism implemented with Postgres advisory locks."
license = "BSD-3-Clause"
authors = ["Sean Kerr <sean@code-box.org>"]
readme = "README.md"
packages = [{include = "postgres_lock"}]

[tool.poetry.dependencies]
python = "^3.7"

[virtualenvs]
in-project = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
