[tool.poetry]
name = "postgres-lock"
version = "0.1.1"
description = "Lock mechanism implemented with Postgres advisory locks."
license = "BSD-3-Clause"
authors = ["Sean Kerr <sean@code-box.org>"]
readme = "README.md"
repository = "https://github.com/seankerr/py-postgres-lock"
keywords = ["postgres", "postgresql", "distributed", "lock"]
packages = [{include = "postgres_lock"}]

[tool.poetry.dependencies]
python = "^3.7"

[virtualenvs]
in-project = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
