[tool.poetry]
name = "postgresql-lock"
version = "0.2.2"
description = "Lock mechanism implemented with PostgreSQL advisory locks."
license = "BSD-3-Clause"
authors = ["Sean Kerr <sean@code-box.org>"]
readme = "README.md"
repository = "https://github.com/seankerr/py-postgresql-lock"
keywords = ["postgresql", "postgres", "distributed", "lock"]
packages = [{include = "postgresql_lock"}]

[tool.poetry.dependencies]
python = "^3.7"

[virtualenvs]
in-project = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
